# gpt

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: release-host.yml
candid/: gpt_index.did  gpt_index.ts  gpt_user.did  gpt_user.ts  internet_identity.ts
candid/declarations/: gpt_index.did.d.ts  gpt_index.did.js  gpt_user.did.d.ts  gpt_user.did.js  internet_identity.did.d.ts  internet_identity.did.js
makefiles/: frontend.mk  host.mk  ii.mk  index.mk  measurement.mk  node.mk  user.mk  vm.mk
src/gpt_frontend/: next.config.ts  package.json  tsconfig.json
src/gpt_frontend/public/.well-known/: ic-domains
src/gpt_host/: Cargo.toml  Dockerfile
src/gpt_host/src/: main.rs
src/gpt_host/src/commands/: check.rs  config.rs  identity.rs  init.rs  launch.rs  mod.rs  node.rs  router.rs
src/gpt_host/src/diagnostics/: checks.rs  display.rs  mod.rs  telemetry.rs
src/gpt_host/src/ic/: client.rs  mod.rs
src/gpt_host/src/identity/: mod.rs  seed.rs
src/gpt_host/src/network/: mod.rs  port_manager.rs  router.rs
src/gpt_host/src/systemd/: mod.rs  service.rs  watcher.rs
src/gpt_host/src/vm/: assets.rs  launcher.rs  mod.rs
src/gpt_index/: Cargo.toml
src/gpt_index/src/: config.rs  lib.rs  storage.rs  wasm_assets.rs
src/gpt_index/src/handlers/: governance.rs  liveness.rs  mod.rs  model.rs  upgrade.rs  user.rs  user_canister.rs
src/gpt_index/src/handlers/node/: attestation.rs  config.rs  create.rs  lifecycle.rs  list.rs  mod.rs  public.rs  register.rs  utils.rs
src/gpt_measurement/: Cargo.toml  Dockerfile
src/gpt_measurement/src/: main.rs
src/gpt_node/: Cargo.toml  Dockerfile
src/gpt_node/src/: main.rs
src/gpt_node/src/api/: mod.rs  routes.rs  status.rs
src/gpt_node/src/api/websocket/: connection.rs  handler.rs  message.rs  mod.rs  types.rs
src/gpt_node/src/bootstrap/: comms.rs  mod.rs  state_init.rs
src/gpt_node/src/clients/: mod.rs
src/gpt_node/src/clients/ai_provider/: context.rs  embedding_handler.rs  extended_usage.rs  mod.rs  provider.rs  request_builder.rs  resilient_types.rs  stream_handler.rs  types.rs  usage_parser.rs
src/gpt_node/src/clients/canister/: client.rs  conversation.rs  message.rs  mod.rs  requirements.rs  whoami.rs
src/gpt_node/src/core/: error.rs  metrics.rs  mod.rs  sensitive.rs  state.rs
src/gpt_node/src/core/job/: context.rs  encryption.rs  mod.rs  processor.rs  types.rs
src/gpt_node/src/lifecycle/: heartbeat.rs  mod.rs  shutdown.rs
src/gpt_node/src/security/: mod.rs
src/gpt_node/src/security/attestation/: certs.rs  content.rs  kds.rs  mod.rs  report.rs  requirements.rs  util.rs  verification.rs
src/gpt_node/src/security/identity/: ephemeral.rs  extraction.rs  mod.rs  node.rs
src/gpt_node/src/services/: mod.rs
src/gpt_node/src/services/canister/: mod.rs
src/gpt_node/src/services/openai/: mod.rs
src/gpt_node/src/websocket/: mod.rs
src/gpt_types/: Cargo.toml
src/gpt_types/src/: error.rs  lib.rs  prelude.rs
src/gpt_user/: Cargo.toml
src/gpt_user/src/: config.rs  lib.rs  storage.rs
src/gpt_user/src/handlers/: mod.rs  upgrade.rs
src/gpt_user/src/handlers/chat/: archive.rs  create.rs  delete.rs  get.rs  get_jobs.rs  list.rs  mod.rs  rename.rs  unarchive.rs
src/gpt_user/src/handlers/file_system/: create.rs  delete.rs  mod.rs  read.rs  update.rs  utils.rs
src/gpt_user/src/handlers/message/: add.rs  continue_from_tool.rs  edit.rs  get.rs  mod.rs  retry.rs  store_tool_results.rs  update_attachments.rs
src/gpt_user/src/handlers/node/: claim_job.rs  complete_job.rs  get_message.rs  get_nodes.rs  mod.rs
src/gpt_user/src/handlers/user/: finalize.rs  is_finalized.rs  list.rs  mod.rs  storage_usage.rs  whoami.rs
src/gpt_user/src/helpers/: file_system_helpers.rs  generation_helpers.rs  message_helpers.rs  mod.rs  node_helpers.rs  user_helpers.rs
src/gpt_user/src/timers/: cleanup.rs  manager.rs  mod.rs  sync.rs
src/gpt_vm/os/: Dockerfile  build_os.sh  init  udhcpc.script
src/gpt_vm/ovmf/: Dockerfile  build_ovmf.sh
(+253 files in other folders)
