[package]
name = "gpt_node"
version = "0.2.0"
edition = "2024"

[dependencies]
gpt_types = { path = "../gpt_types" }
async-openai = { version = "0.32.2", features = [
  "byot",
  "chat-completion",
  "audio",
  "image",
  "model",
  "rustls",
] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.128"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "env-filter",
  "chrono",
] }
ic-agent = "0.38.2"
ic-transport-types = "0.40.0"
candid = "0.10.18"
clap = { version = "4.5.20", features = ["derive"] }
k256 = "0.13.4"
rand_core = "0.6.4"
sev = { version = "7.1.0", default-features = false, features = [
  "snp",
  "crypto_nossl",
  "serde",
] }
anyhow = "1.0.86"
hex = "0.4.3"
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.12.5", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "json",
] }
sha2 = "0.10.8"
p384 = { version = "0.13.1", features = ["ecdsa"] }
signature = { version = "2.2.0", features = ["digest"] }
base64 = "0.22.1"
bincode = "1.3.3"
governor = "0.10.0"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
age = "0.11.1"
zeroize = "1.8.1"
chrono = "0.4.41"
tracing-bunyan-formatter = "0.3.10"
tracing-appender = "0.2.3"
bech32 = "0.11.0"
serde_bytes = "0.11.19"
